--- a/package.json
+++ b/package.json
@@ -2,34 +2,29 @@
   "name": "talkpapers.com",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
-  "engines": {
-    "node": "9.4.0"
-  },
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node .",
-    "build": "NODE_ENV=production next build",
-    "start": "NODE_ENV=production node .",
-    "heroku-postbuild": "npm run build"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@gitlab.com/matheusho/talkpapers.com.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/matheusho/talkpapers.com/issues"
+  },
+  "homepage": "https://gitlab.com/matheusho/talkpapers.com#README",
   "dependencies": {
-    "draft-js": "^0.10.4",
-    "express": "^4.16.2",
-    "final-form": "^3.1.0",
-    "firebase": "^4.8.2",
-    "firebaseui": "^2.5.1",
-    "next": "^4.2.1",
-    "next-routes": "^1.2.0",
+    "material-ui": "^1.0.0-beta.38",
+    "next": "^5.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-final-form": "^2.2.0",
-    "react-firebaseui": "^1.0.10",
-    "react-icons-kit": "^1.0.7",
-    "styled-components": "^2.4.0",
-    "styled-spinkit": "^0.2.0",
-    "validate.js": "^0.12.0"
+    "react-final-form": "^3.1.5"
   }
 }
